--- a/zoom.html
+++ b/zoom.html
@@ -237,7 +237,9 @@ meaning our user research down the road spanned a greater audience.
         <img src="img/zoom/chat3.png" alt="" id="chat3">
         <h2>Recap</h2>
         <p>Watch a recap of the Problems + Trends, put in the context of realistic scenarios!</p>
-        <p><a href="https://youtu.be/anfKyUj0KQo">https://youtu.be/anfKyUj0KQo</a></p>
+        <iframe width="420" height="315"
+          src="https://youtu.be/embed/anfKyUj0KQo">
+        </iframe>
 
         <h1>Redesign</h1>
         <h2>Competitors</h2>
