--- a/play.html
+++ b/play.html
@@ -109,7 +109,7 @@
         <div id="surreal">
           <div class="surreal-column">
             <div id="surreal-text1">
-              <p>THE SUR R E A L</p>
+              <p>THE SUR <b>REAL</b></p>
             </div>
             <div id="surreal-text2">
               <p>M I N D</p>
@@ -248,7 +248,7 @@
           </div>
         </div>
         <div id="multi-text">
-          <p>MULTIMEDIA</p>
+          <p><b>MULTI</b>MEDIA</p>
         </div>
       </div>
       <div class="play-display">
@@ -309,7 +309,7 @@
             <div class="img-div">
               <img src="img/play-sketches/2019/15tn.jpg" alt="" class="nineteen-img">
             </div>
-            <div class="nineteen-text">
+            <div id="nineteen-text">
               <p>2019 -</p>
             </div>
           </div>
@@ -366,7 +366,6 @@
             </div>
           </div>
         </div>
-        <p>2015-2018</p>
       </div>
       <div class="play-display">
         <div id="digi">
