slideshow original images

--- a/play.html
+++ b/play.html
@@ -115,7 +115,7 @@
               class="oli-img thumbnail__image standard" id="10"> 
             </div>
             <div class="thumbnail">
-              <img src="img/play-oli/oli5tn.jpeg" alt="doop"
+              <img src="img/play-oli/oli5tn.jpg" alt="doop"
               class="oli-img thumbnail__image standard" id="11"> 
             </div>
             <div class="thumbnail">
