--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
         <li><a href="play.html" class="play-nav">play</a></li>
         <li><a href="about.html" class="about-nav">about</a></li>
         <li><a href="everyday.html" class="everyday-nav">everyday</a></li>
-        <li><a href="#resume" class="resume-nav">resume</a></li>
+        <li><a href="img/FionaLiuResume.pdf" target="_blank" class="resume-nav">resume</a></li>
       </ul>
     </header>
 
@@ -73,6 +73,28 @@
             <button class="dxd-button" type="button">Coming Soon!</button>
           </div>
         </div>
+        <div class="exp" id="ethics">
+          <div class="ethics-img">
+            <img class="uiexp4" src="img/ethics-exp.png">
+          </div>
+          <div class="ethics-text">
+            <h1 class="experience-company">Ethics Primer</h3>
+            <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
+            <h3 class="experience-description">Evaluating ethical implications of your digital consumption - on your terms.</h3>
+            <button id="clickable"class="ethics-button" type="button" onclick="window.location.href='ethics-primer.html'">View Concept</button>
+          </div>
+        </div>
+        <div class="exp" id="sleep">
+          <div class="sleep-img">
+            <img class="uiexp5" src="img/sleep-exp.png">
+          </div>
+          <div class="sleep-text">
+            <h1 class="experience-company">Sleep Tracker Redesign</h3>
+            <h2 class="experience-subheading">Course Project | Designer</h1>
+            <h3 class="experience-description">Altering information visualization influence through sleep feedback.</h3>
+            <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleept-tracker.html'">View Concept</button>
+          </div>
+        </div>
       </div>
       </div>
       <div id="vis">
@@ -93,7 +115,7 @@
             <h1 class="experience-company">Dormit</h3>
             <h2 class="experience-subheading">UCSD Startup | Logo, Flyer Designer</h1>
             <h3 class="experience-description">Bringing late night food delivery to the heart of the UCSD campus.</h3>
-            <button id="clickable" class="dormit-button" type="button">View Project</button>
+            <button id="clickable" class="dormit-button" type="button" onclick="window.location.href='dormit.html'">View Project</button>
           </div>
         </div>
         <div class="exp">
