--- a/work.html
+++ b/work.html
@@ -120,13 +120,13 @@
         </div>
         <div class="exp">
           <div class="aisc-img">
-            <img class="visexp2" src="img/aisc.png">
+            <img class="visexp2" src="img/aisc-exp.png">
           </div>
           <div class="aisc-text">
             <h1 class="experience-company">AI Student Collective</h3>
             <h2 class="experience-subheading">Non-Profit  | Logo, Flyer, Branding</h1>
             <h3 class="experience-description">Providing accessible AI literacy and ethical experiences for the future of our workforce.</h3>
-            <button class="aisc-button" type="button">Coming Soon!</button>
+            <button id="clickable" class="aisc-button" type="button" onclick="window.location.href='aisc.html'">View Project</button>
           </div>
         </div>
         <div class="exp">
@@ -137,7 +137,7 @@
             <h1 class="experience-company">Student-Athlete Community Foundation</h3>
             <h2 class="experience-subheading">Non-Profit | Logo, Flyer, Branding</h1>
             <h3 class="experience-description">Giving back to the athletics community through a shared sense of service.</h3>
-            <button class="sacf-button" type="button">Coming Soon!</button>
+            <button id="clickable" class="sacf-button" type="button" onclick="window.location.href='sacf.html'">View Project</button>
           </div>
         </div>
       </div>
