--- a/aisc.html
+++ b/aisc.html
@@ -59,7 +59,7 @@
         accessible AI literacy through pre-professional programs and events, spanning from
         courses at the high school-level, to symposiums at the college-level.</p>
       <h2>Collaboration</h2>
-      <p>One of my friends, Neil Damle (my favoritest person ever!!), has been working with Humans for AI for the past few years,
+      <p>One of my friends, Neil Damle, has been working with Humans for AI for the past few years,
         and wanted to extend it to branches within universities, as well as surrounding high schools;
         he worked with Anirudh Murugesan to found AISC branches at the University of California, San Diego,
         as well as the University of California, Davis. Neil and Ani enlisted my help for the global and San Diego
