--- a/work.html
+++ b/work.html
@@ -92,7 +92,7 @@
             <h1 class="experience-company">Sleep Tracker Redesign</h3>
             <h2 class="experience-subheading">Course Project | Designer</h1>
             <h3 class="experience-description">Altering information visualization influence through sleep feedback.</h3>
-            <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleept-tracker.html'">View Concept</button>
+            <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleep-tracker.html'">View Concept</button>
           </div>
         </div>
       </div>
