--- a/aisc.html
+++ b/aisc.html
@@ -54,7 +54,7 @@
     </div>
     <div class="main-body">
       <h1>Introduction</h1>
-      <p>The Artificial Intelligence Student Collective is a child organization of <a href="humansforai.com">Humans for
+      <p>The Artificial Intelligence Student Collective is a child organization of <a href="https://www.humansforai.com">Humans for
         AI</a> catered towards high school and college students. It seeks to provide ethical and
         accessible AI literacy through pre-professional programs and events, spanning from
         courses at the high school-level, to symposiums at the college-level.</p>
