--- a/everyday.html
+++ b/everyday.html
@@ -13,7 +13,7 @@
 
   <body>
     <!--navbar-->
-    <header>
+    <header id="everyday-nav">
       <a href="index.html" class = "logo"> <img src="img/logo.png"> </a>
       <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -25,6 +25,10 @@
         <li><a href="#resume" class="resume-nav">resume</a></li>
       </ul>
     </header>
+    <div class="everyday-img">
+      <img src="img/everyday.png" alt="">
+    </div>
+
 
 
   </body>
