--- a/play.html
+++ b/play.html
@@ -25,7 +25,7 @@
       <li><a href="play.html" class="play-nav">play</a></li>
       <li><a href="about.html" class="about-nav">about</a></li>
       <li><a href="everyday.html" class="everyday-nav">everyday</a></li>
-      <li><a href="#resume" class="resume-nav">resume</a></li>
+      <li><a href="FionaLiuResume.pdf" class="resume-nav">resume</a></li>
     </ul>
   </header>
 
@@ -40,20 +40,17 @@
     <div class="play-sections">
 
       <!-- POP-UP OVERLAY STUFF -->
-      <div class="overlay" id="qwer">      
+      <div class="overlay" id="qwer">
         <div class="overlay__inner" >
           <!-- TODO: change arrow -->
-          <a class="arrow-left" onclick="changeSlideNum(-1)">placeholder
-            left arrow</a>
+          <img class="arrow-left" src="img/leftarrow.png" alt="" onclick="changeSlideNum(-1)">
           <div class="flex-container">
             <div class="img-with-caption">
               <img class="expanded-img">
-              <p></p>
             </div>
           </div>
           <!-- TODO: change -->
-          <a class="arrow-right" onclick="changeSlideNum(1)">placeholder
-            right arrow</a>
+          <img class="arrow-right" src="img/rightarrow.png" alt="" onclick="changeSlideNum(1)">
         </div>
       </div>
 
@@ -68,7 +65,7 @@
             <div class="thumbnail">
               <img src="img/play-investigation/investigation1tn.jpg" alt="poopty
               scoop"
-              class="investigation-img thumbnail__image standard" id="1"> 
+              class="investigation-img thumbnail__image standard" id="1">
             </div>
             <div class="thumbnail">
               <img src="img/play-investigation/investigation2tn.jpg" alt="222"
@@ -88,7 +85,7 @@
             </div>
             <div class="thumbnail">
               <img src="img/play-investigation/investigation5tn.jpg" alt=""
-              class="investigation-img thumbnail__image standard" id="6">    
+              class="investigation-img thumbnail__image standard" id="6">
             </div>
             <div class="thumbnail">
               <img src="img/play-investigation/investigation9tn.jpg" alt=""
@@ -100,7 +97,7 @@
             </div>
             <div class="thumbnail">
               <img src="img/play-investigation/investigation8tn.jpg" alt=""
-              class="investigation-img thumbnail__image standard" id="9">    
+              class="investigation-img thumbnail__image standard" id="9">
             </div>
           </section>
         </div>
@@ -112,23 +109,23 @@
           <section id="oli-grid">
             <div class="thumbnail">
               <img src="img/play-oli/oli3tn.jpg" alt="doop"
-              class="oli-img thumbnail__image standard" id="10"> 
+              class="oli-img thumbnail__image standard" id="10">
             </div>
             <div class="thumbnail">
               <img src="img/play-oli/oli5tn.jpg" alt="doop"
-              class="oli-img thumbnail__image standard" id="11"> 
+              class="oli-img thumbnail__image standard" id="11">
             </div>
             <div class="thumbnail">
               <img src="img/play-oli/oli7tn.jpg" alt="doop"
-              class="oli-img thumbnail__image standard" id="12"> 
+              class="oli-img thumbnail__image standard" id="12">
             </div>
             <div class="thumbnail">
               <img src="img/play-oli/oli4tn.jpg" alt="doop"
-              class="oli-img thumbnail__image standard" id="13"> 
+              class="oli-img thumbnail__image standard" id="13">
             </div>
             <div class="thumbnail">
               <img src="img/play-oli/oli6tn.jpg" alt="doop"
-              class="oli-img thumbnail__image standard" id="14"> 
+              class="oli-img thumbnail__image standard" id="14">
             </div>
             <div id="oli-text" class=oli-column>
               <p>OLI</p>
@@ -148,42 +145,42 @@
               <p>M I N D</p>
             </div>
           </div>
-          
+
           <section id="surreal-grid">
             <div class="thumbnail">
               <img src="img/play-surreal/surreal1tn.jpg" alt="meow"
-              class="surreal-img thumbnail__image standard" id="15"> 
+              class="surreal-img thumbnail__image standard" id="15">
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal2tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="16"> 
+              class="surreal-img thumbnail__image standard" id="16">
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal3tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="17"> 
+              class="surreal-img thumbnail__image standard" id="17">
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal4tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="18"> 
+              class="surreal-img thumbnail__image standard" id="18">
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal5tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="19"> 
+              class="surreal-img thumbnail__image standard" id="19">
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal6tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="20"> 
+              class="surreal-img thumbnail__image standard" id="20">
             </div class="hide">
             <div>
-              
+
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal7tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="21"> 
+              class="surreal-img thumbnail__image standard" id="21">
             </div>
             <div class="thumbnail">
               <img src="img/play-surreal/surreal8tn.jpg" alt=""
-              class="surreal-img thumbnail__image standard" id="22"> 
+              class="surreal-img thumbnail__image standard" id="22">
             </div>
           </section>
         </div>
@@ -194,78 +191,78 @@
         <div id="procreate">
           <div class="thumbnail procreate-top">
             <img src="img/play-procreate/procreate19.jpg" alt=""
-            id="23" class="thumbnail__image"> 
+            id="23" class="thumbnail__image">
           </div>
 
           <div class="procreate">
             <section id="procreate-grid">
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate1tn.jpg" alt="bark"
-                class="procreate-img thumbnail__image standard" id="24"> 
+                class="procreate-img thumbnail__image standard" id="24">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate2tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="25"> 
+                class="procreate-img thumbnail__image standard" id="25">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate3tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="26"> 
+                class="procreate-img thumbnail__image standard" id="26">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate4tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="27"> 
+                class="procreate-img thumbnail__image standard" id="27">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate6.gif" alt=""
-                class="procreate-img thumbnail__image standard" id="28"> 
+                class="procreate-img thumbnail__image standard" id="28">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate5tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="29"> 
+                class="procreate-img thumbnail__image standard" id="29">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate7tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="30"> 
+                class="procreate-img thumbnail__image standard" id="30">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate8tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="31"> 
+                class="procreate-img thumbnail__image standard" id="31">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate10tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="32"> 
+                class="procreate-img thumbnail__image standard" id="32">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate11tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="33"> 
+                class="procreate-img thumbnail__image standard" id="33">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate12tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="34"> 
+                class="procreate-img thumbnail__image standard" id="34">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate13tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="35"> 
+                class="procreate-img thumbnail__image standard" id="35">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate14tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="36"> 
+                class="procreate-img thumbnail__image standard" id="36">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate15tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="37"> 
+                class="procreate-img thumbnail__image standard" id="37">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate16tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="38"> 
+                class="procreate-img thumbnail__image standard" id="38">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate17tn.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="39"> 
+                class="procreate-img thumbnail__image standard" id="39">
               </div>
               <div class="thumbnail">
                 <img src="img/play-procreate/procreate18.jpg" alt=""
-                class="procreate-img thumbnail__image standard" id="40"> 
+                class="procreate-img thumbnail__image standard" id="40">
               </div>
             </section>
             <div id="procreate-text" class="procreate-column">
