--- a/play.html
+++ b/play.html
@@ -25,7 +25,7 @@
       <li><a href="play.html" class="play-nav">play</a></li>
       <li><a href="about.html" class="about-nav">about</a></li>
       <li><a href="everyday.html" class="everyday-nav">everyday</a></li>
-      <li><a href="FionaLiuResume.pdf" class="resume-nav">resume</a></li>
+      <li><a href="img/FionaLiuResume.pdf" class="resume-nav">resume</a></li>
     </ul>
   </header>
 
