--- a/sleep-tracker.html
+++ b/sleep-tracker.html
@@ -37,15 +37,15 @@
       <div class="title-text">
         <div class="title-column">
           <h2>Timeline:</h2>
-          <p>Aug 2022 - Present</p>
+          <p>Dec 2022</p>
         </div>
         <div class="title-column">
           <h2>Role:</h2>
-          <p>Lead Designer</p>
+          <p>UI/UX Designer</p>
         </div>
         <div class="title-column">
           <h2>Project Type:</h2>
-          <p>Logo, Flyers, Branding</p>
+          <p>Course Project</p>
         </div>
       </div>
     </div>
@@ -71,7 +71,11 @@
         relayed the numerical information to the user,  2) a scolding manner that reprimanded the user to get
         more sleep, and 3) a rewarding manner that justified the user regardless of the hours.</p>
       <h1>Results</h1>
-      <p>VIDEO</p>
+      <div class="centered last-image">
+        <video width="400" controls autoplay>
+          <source src="img/sleep-tracker/SleepIterationPrototypePort.MOV" type="video/mp4">
+        </video>
+      </div>
       <h2>Neutral</h2>
       <p>This prototype simply conveyed the number of hours slept.</p>
       <div class="centered">
