--- a/wordrive.html
+++ b/wordrive.html
@@ -150,15 +150,20 @@
         <img class="set-img" src="img/wordrive/set1.png" alt="">
       </div>
       <h2>Set 2</h2>
-      <div class="set-img-div">
+      <div class="set-img-div last-image">
         <img class="set-img" src="img/wordrive/set2.png" alt="">
       </div>
       <h1>Final Prototype</h1>
       <h2>Prototype To-Size</h2>
-      <div class="proto">
+      <div class="proto last-image">
         <img class="proto-img" src="img/wordrive/proto.png" alt="">
       </div>
       <h2>Run-Through</h2>
+      <div class="centered last-image">
+        <video width="400" controls autoplay>
+          <source src="img/wordrive/wordrive-video.mov" type="video/mp4">
+        </video>
+      </div>
       <h2>Annotated Features</h2>
       <div class="annotated-images">
         <img class="annotated-full" src="img/wordrive/annotated1.png" alt="">
@@ -169,7 +174,7 @@
         <img class="annotated-full" src="img/wordrive/annotated6.png" alt="">
         <img class="annotated-half" src="img/wordrive/annotated7.png" alt="">
         <img class="annotated-full" src="img/wordrive/annotated8.png" alt="">
-        <img class="annotated-full" src="img/wordrive/annotated9.png" alt="">
+        <img class="annotated-full last-image" src="img/wordrive/annotated9.png" alt="">
       </div>
       <h1>Access</h1>
       <div class="access">
