--- a/play.html
+++ b/play.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Play</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" class="favicon">
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery-style.css">
