--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Work</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" class="favicon">
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet"
@@ -41,8 +42,8 @@
 
       <div id="experience" >
         <div class="exp">
-          <div class="wordrive-img">
-            <img class="uiexp1" src="img/ui-exp1.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/ui-exp1.png">
           </div>
           <div class="wordrive-text">
             <h1 class="experience-company">Wordrive</h3>
@@ -52,8 +53,8 @@
           </div>
         </div>
         <div class="exp">
-          <div class="zoom-img">
-            <img class="uiexp2" src="img/ui-exp2.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/ui-exp2.png">
           </div>
           <div class="zoom-text">
             <h1 class="experience-company">Zoom Redesign</h3>
@@ -63,8 +64,8 @@
           </div>
         </div>
         <div class="exp" id="dxd">
-          <div class="dxd-img">
-            <img class="uiexp3" src="img/default-exp.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/default-exp.png">
           </div>
           <div class="dxd-text">
             <h1 class="experience-company">DXD</h3>
@@ -74,8 +75,8 @@
           </div>
         </div>
         <div class="exp" id="ethics">
-          <div class="ethics-img">
-            <img class="uiexp4" src="img/ethics-exp.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/ethics-exp.png">
           </div>
           <div class="ethics-text">
             <h1 class="experience-company">Ethics Primer</h3>
@@ -85,8 +86,8 @@
           </div>
         </div>
         <div class="exp" id="sleep">
-          <div class="sleep-img">
-            <img class="uiexp5" src="img/sleep-exp.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/sleep-exp.png">
           </div>
           <div class="sleep-text">
             <h1 class="experience-company">Sleep Tracker Redesign</h3>
