--- a/zoom.html
+++ b/zoom.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Zoom Redesign</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" class="favicon">
     <link rel="stylesheet" href="css/zoom-style.css">
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
