--- a/wordrive.html
+++ b/wordrive.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wordrive</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" class="favicon">
     <link rel="stylesheet" href="css/wordrive-style.css">
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -13,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   </head>
 
-  <header>
+  <header id="work-nav">
     <a href="index.html" class = "logo"> <img src="img/logo.png"> </a>
     <div class="bx bx-menu" id="menu-icon"></div>
 
