--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
       <div id="experience" >
         <div class="exp">
-          <div class="wordrive-img">
-            <img class="uiexp1" src="img/ui-exp1.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/ui-exp1.png">
           </div>
           <div class="wordrive-text">
             <h1 class="experience-company">Wordrive</h3>
@@ -176,8 +176,8 @@
           </div>
         </div>
         <div class="exp">
-          <div class="zoom-img">
-            <img class="uiexp2" src="img/ui-exp2.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/ui-exp2.png">
           </div>
           <div class="zoom-text">
             <h1 class="experience-company">Zoom Redesign</h3>
@@ -187,8 +187,8 @@
           </div>
         </div>
         <div class="exp" id="dxd">
-          <div class="dxd-img">
-            <img class="uiexp3" src="img/default-exp.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/default-exp.png">
           </div>
           <div class="dxd-text">
             <h1 class="experience-company">DXD</h3>
@@ -198,8 +198,8 @@
           </div>
         </div>
         <div class="exp" id="ethics">
-          <div class="ethics-img">
-            <img class="uiexp4" src="img/ethics-exp.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/ethics-exp.png">
           </div>
           <div class="ethics-text">
             <h1 class="experience-company">Ethics Primer</h3>
@@ -209,14 +209,14 @@
           </div>
         </div>
         <div class="exp" id="sleep">
-          <div class="sleep-img">
-            <img class="uiexp5" src="img/sleep-exp.png">
+          <div class="square-img">
+            <img class="uiexp" src="img/sleep-exp.png">
           </div>
           <div class="sleep-text">
             <h1 class="experience-company">Sleep Tracker Redesign</h3>
             <h2 class="experience-subheading">Course Project | Designer</h1>
             <h3 class="experience-description">Altering information visualization influence through sleep feedback.</h3>
-            <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleept-tracker.html'">View Concept</button>
+            <button id="clickable"class="sleep-button" type="button" onclick="window.location.href='sleep-tracker.html'">View Concept</button>
           </div>
         </div>
       </div>
