--- a/wordrive.html
+++ b/wordrive.html
@@ -49,7 +49,8 @@
       </p>
       <h2>Collaboration</h2>
       <p>I took the design initiative on this, but the people who conceptualized and made it actually come to
-        life are Aaron Z. Zhu, Columbia ‘25 studying Computer Science and Linguistics, and Andrew S. Chen,
+        life are <a target="_blank" href="http://github.com/zhucs">Aaron Z. Zhu</a>, Columbia ‘25 studying Computer Science and Linguistics, and
+        <a target="_blank" href="https://github.com/chen-sse">Andrew S. Chen</a>,
         Stanford ‘25 studying Mathematics and Computer Science after developing the Chen Method for language-learning!
         They were enthusiastic to get their hands dirty when learning the nuances of design, and I definitely
         encourage you to take a look at their work.</p>
@@ -81,22 +82,6 @@
       <h2>Platform</h2>
       <p>The Chrome extension will be developed locally, using APIs made available by Google Chrome,
         and then published to the Google Web Store.</p>
-      <h2>Development Responsibilities</h2>
-      <p>Andrew S. Chen and Aaron Z. Zhu will be developing the software.</p>
-      <h2>Functional Requirements</h2>
-      <p id="pre-list">Users should be able to:</p>
-      <ul class="functionality-list">
-        <li>highlight the text on a block of text they are reading</li>
-        <li>review the words they have saved</li>
-      </ul>
-      <h2>User Interfaces</h2>
-      <p>Front-end software: Google Chrome, Chrome Extension UI</p>
-      <h2>Hardware Interfaces</h2>
-      <p>Any operating system which runs Google Chrome</p>
-      <h2>Performance, Safety, and Security Requirements</h2>
-      <p>None listed so far</p>
-      <h2>Technologies Used</h2>
-      <p>Web development: HTML, CSS, JavaScript, JavaScript libraries</p>
       <p id="pre-list">Wordrive is, in all its functionality:</p>
       <ol class="wordrive-ordered">
         <li>
@@ -204,7 +189,7 @@
           <img id="access8"src="img/wordrive/access8.png" alt="">
         </div>
         <p>6. Wordrive should appear as one of your Extensions now!</p>
-        <div class="centered">
+        <div class="centered last-image">
           <img id="access9"src="img/wordrive/access9.png" alt="">
         </div>
         <h2>How to use Wordrive:</h2>
