--- a/sacf.html
+++ b/sacf.html
@@ -108,7 +108,7 @@
   </body>
   <footer>
     <p class=footer-chat>let's chat!</p>
-    <i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i>
+    <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
     <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
