--- a/wordrive.html
+++ b/wordrive.html
@@ -166,7 +166,8 @@
       <div class="access">
         <h2>How to download Wordrive:</h2>
         <p>1. Head to <a href="https://github.com/chen-sse/wordrive">https://github.com/chen-sse/wordrive</a></p>
-        <p>2. Click the green <b>&lt;&gt; Code</b> Button</p>
+        <p>2. Click the green <b>&lt;&gt; Code</b> Button<img src="img/wordrive/access13.png" alt=""></p>
+
         <div class="access-sublist">
           <p>a. In the <b>Local</b> Tab<img src="img/wordrive/access1.png" alt="">
             , select <b>Download ZIP</b><img src="img/wordrive/access2.png" alt=""></p>
@@ -210,7 +211,7 @@
   </body>
   <footer>
     <p class=footer-chat>let's chat!</p>
-    <i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i>
+    <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
     <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
