--- a/zoom.html
+++ b/zoom.html
@@ -238,8 +238,8 @@ meaning our user research down the road spanned a greater audience.
         <img src="img/zoom/chat3.png" alt="" id="chat3">
         <h2>Recap</h2>
         <p>Watch a recap of the Problems + Trends, put in the context of realistic scenarios!</p>
-        <iframe width="420" height="315"
-          src="https://youtu.be/embed/anfKyUj0KQo">
+        <iframe class="recap"width="650" height="385"
+          src="https://www.youtube.com/embed/anfKyUj0KQo">
         </iframe>
 
         <h1>Redesign</h1>
@@ -417,7 +417,7 @@ meaning our user research down the road spanned a greater audience.
   </body>
   <footer>
     <p class=footer-chat>let's chat!</p>
-    <i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i>
+    <a href = "mailto: fiona_liu1@brown.com"><i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i></a>
     <a href="https://linkedin.com/in/fionaliu6"><i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i></a>
     <p class="footer-name">designed by Fiona Liu | 2022</p>
 </footer>
